# tic-tac-toe

./: LICENSE  README.md  index.hs  stack.yaml  tic-tac-toe.cabal
src/: AI.hs  Constants.hs  Game.hs  Main.hs  Predicates.hs  Types.hs  Utils.hs
test/: AISpec.hs  ConstantsSpec.hs  Examples.hs  PredicatesSpec.hs  Spec.hs  TestUtils.hs  TypesSpec.hs  UtilsSpec.hs
