name:                tic-tac-toe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/creatorrr/tic-tac-toe#readme
author:              Diwank Singh Tomer
maintainer:          diwank.singh@gmail.com
copyright:           2017 Diwank Singh Tomer
category:            Fun
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tic-tac-toe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , tuple
                     , OneTuple
                     , random
                     , hspec
